# keplor

./: .gitignore  BASELINE.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PERF_AUDIT.md  PERF_PLAN.md  README.md  START_HERE.md  clippy.toml  deny.toml  docker-compose.yml  justfile  keplor.example.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
crates/keplor-cli/: Cargo.toml
crates/keplor-cli/src/: main.rs
crates/keplor-core/: Cargo.toml
crates/keplor-core/src/: cost.rs  error.rs  event.rs  flags.rs  id.rs  lib.rs  payload_ref.rs  provider.rs  sanitize.rs  usage.rs
crates/keplor-pricing/: Cargo.toml
crates/keplor-pricing/benches/: pricing_bench.rs
crates/keplor-pricing/data/: model_prices_and_context_window.json
crates/keplor-pricing/src/: catalog.rs  compute.rs  error.rs  lib.rs  model.rs
crates/keplor-pricing/tests/: cost_engine.rs
crates/keplor-pricing/tests/fixtures/usage/: anthropic_cache_write_above_1hr.json  anthropic_claude_sonnet_cached.json  bedrock_claude_cached.json  gemini_flash_with_video.json  openai_gpt4o.json  openai_gpt4o_batch.json  openai_gpt4o_cached.json
crates/keplor-providers/: Cargo.toml
crates/keplor-providers/src/: lib.rs
crates/keplor-proxy/: Cargo.toml
crates/keplor-proxy/benches/: proxy_overhead.rs
crates/keplor-proxy/examples/: echo-proxy.rs
crates/keplor-proxy/src/: capture.rs  config.rs  error.rs  headers.rs  lib.rs  limits.rs  route.rs  server.rs  tee.rs  upstream.rs
crates/keplor-proxy/tests/: integration.rs
crates/keplor-server/: Cargo.toml
crates/keplor-server/benches/: dhat_pipeline.rs  pipeline_bench.rs
crates/keplor-server/src/: auth.rs  config.rs  error.rs  fast_json.rs  idempotency.rs  lib.rs  metrics.rs  normalize.rs  pipeline.rs  rate_limit.rs  request_id.rs  rollup.rs  routes.rs  schema.rs  server.rs  validate.rs
crates/keplor-server/tests/: http_integration.rs  tls_integration.rs
crates/keplor-store/: Cargo.toml
crates/keplor-store/benches/: dhat_batch.rs  store_bench.rs
crates/keplor-store/src/: archive.rs  batch.rs  components.rs  compress.rs  error.rs  filter.rs  kdb_store.rs  lib.rs  mapping.rs  migrations.rs  store.rs  stored_event.rs  types.rs
crates/keplor-store/src/blob/: embedded.rs  mod.rs  s3.rs
crates/keplor-store/src/kdb_store/: manifests.rs
crates/keplor-store/tests/: integration.rs
crates/keplor-telemetry/: Cargo.toml
crates/keplor-telemetry/src/: lib.rs
deploy/: keplor-backup.service  keplor-backup.timer  keplor.service
docs/: architecture.md  integration.md  multi-region.md  operations.md  privacy.md  progress.md  providers.md  security.md
docs/phases/: phase-00-bootstrap.md  phase-01-core-types.md  phase-02-pricing.md  phase-03-storage.md  phase-04-proxy-core.md  phase-05-openai-anthropic.md  phase-06-cli-mvp.md  phase-07-remaining-providers.md  phase-08-compression.md  phase-09-remote-sinks.md  phase-10-admin-ui.md  phase-11-hardening.md  phase-A-keplordb-cutover.md  phase-B-sqlite-feature-gate.md
docs/runbooks/: catalog-update.md  disk-full.md  failover.md  key-rotation.md  schema-migration.md  tls-rotation.md
site/: index.html  package-lock.json  svelte.config.js
site/assets/: style.css
site/docs/: api-reference.html  cli.html  configuration.html  index.html  quickstart.html
site/src/: app.css  app.html
site/src/lib/components/: CodeBlock.svelte  DocsSidebar.svelte  Footer.svelte  Nav.svelte  Pre.svelte  ThemeToggle.svelte
site/src/routes/: +layout.svelte  +page.svelte
site/src/routes/docs/: +layout.svelte  +page.svelte
site/src/routes/docs/api-reference/: +page.svelte
site/src/routes/docs/benchmarks/: +page.svelte
site/src/routes/docs/blob-storage/: +page.svelte
site/src/routes/docs/cli/: +page.svelte
site/src/routes/docs/configuration/: +page.svelte
site/src/routes/docs/integration/: +page.svelte
site/src/routes/docs/quickstart/: +page.svelte
tests/fixtures/: bench-config.toml
tests/fixtures/load/: anthropic-event.json  gemini-event.json  single-event.json
tests/load/: run.sh
xtask/: Cargo.toml
xtask/baselines/: .gitkeep  loadtest.json
xtask/src/: loadtest.rs  main.rs
