[workspace]
resolver = "2"
members = [
    "crates/keplor-core",
    "crates/keplor-server",
    "crates/keplor-store",
    "crates/keplor-pricing",
    "crates/keplor-cli",
    "xtask",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.82"
license      = "Apache-2.0"
repository   = "https://github.com/bravo1goingdark/keplor"
authors      = ["Keplor contributors"]
publish      = false

[workspace.lints.rust]
unsafe_code       = "deny"
rust_2018_idioms  = { level = "warn", priority = -1 }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
debug         = false
incremental   = false

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0

[profile.bench]
opt-level     = 3
debug         = 2          # full DWARF symbols for flamegraphs
lto           = false      # fast bench builds (release uses fat LTO)
codegen-units = 16         # parallel codegen for bench compilation speed
strip         = false      # keep symbols (release strips them)
incremental   = false

[workspace.dependencies]
# --- async runtime + HTTP stack ---
tokio                  = { version = "1" }
axum                   = { version = "0.8" }
tower                  = { version = "0.5" }
reqwest                = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots-no-provider", "stream", "json"] }
rustls                 = { version = "0.23", default-features = false, features = ["aws_lc_rs", "logging", "std", "tls12"] }
tokio-rustls           = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
rustls-pki-types       = { version = "1", features = ["std"] }

# --- bytes ---
bytes                  = { version = "1" }

# --- storage + compression ---
rusqlite               = { version = "0.32", features = ["bundled"] }
zstd                   = { version = "0.13" }

# --- serde / json ---
serde                  = { version = "1", features = ["derive"] }
serde_json             = { version = "1", features = ["raw_value"] }

# --- observability ---
tracing                     = { version = "0.1" }
tracing-subscriber          = { version = "0.3" }
metrics                     = { version = "0.24" }
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener", "async-runtime"] }

# --- CLI + config ---
clap    = { version = "4.5", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }

# --- errors ---
thiserror = { version = "2" }
anyhow    = { version = "1" }

# --- ids + hashing ---
ulid = { version = "1" }
sha2 = { version = "0.10" }

# --- secrets + caching ---
secrecy  = { version = "0.10" }
lru      = { version = "0.16" }

# --- benchmarking ---
criterion = { version = "0.5", features = ["html_reports"] }
dhat     = { version = "0.3" }
