[package]
name         = "xtask"
description  = "Custom build tasks: catalogue refresh, binary-size audit."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow       = { workspace = true }
serde_json   = { workspace = true }
serde        = { workspace = true }
tokio        = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hdrhistogram = "7"
