[package]
name         = "keplor-cli"
description  = "The `keplor` binary: run, stats, migrate, query."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[[bin]]
name = "keplor"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
keplor-core    = { path = "../keplor-core" }
keplor-server  = { path = "../keplor-server" }
keplor-store   = { path = "../keplor-store" }
keplor-pricing = { path = "../keplor-pricing" }

tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
anyhow             = { workspace = true }
serde_json         = { workspace = true }
smol_str           = { version = "0.3" }

[dev-dependencies]
