[package]
name         = "keplor-cli"
description  = "The `keplor` binary: run, stats, migrate, query."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[[bin]]
name = "keplor"
path = "src/main.rs"

[lints]
workspace = true

[features]
default              = []
mimalloc             = ["dep:mimalloc"]
s3                   = ["keplor-server/s3"]
# Build the `keplor migrate-from-sqlite` subcommand and link the
# bundled `rusqlite` dep. Off by default — only operators upgrading
# from a pre-Phase-A SQLite store need this.
migrate-from-sqlite  = ["keplor-store/migrate-from-sqlite"]

[dependencies]
keplor-core    = { path = "../keplor-core" }
keplor-server  = { path = "../keplor-server" }
keplor-store   = { path = "../keplor-store" }
keplor-pricing = { path = "../keplor-pricing" }

tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
anyhow             = { workspace = true }
serde_json         = { workspace = true }
smol_str           = { version = "0.3" }

mimalloc = { version = "0.1", optional = true }

[dev-dependencies]
keplor-core = { path = "../keplor-core" }
smol_str    = { version = "0.3" }
http        = "1"
tempfile    = "3"
