[package]
name         = "keplor-core"
description  = "Core types for Keplor: Event, Provider, Usage, Cost, error enums."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[lints]
workspace = true

[dependencies]

[dev-dependencies]
