[package]
name         = "keplor-core"
description  = "Core types for Keplor: Event, Provider, Usage, Cost, error enums."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[lints]
workspace = true

[dependencies]
thiserror  = { workspace = true }
serde      = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
ulid       = { workspace = true, features = ["serde"] }

http     = "1"
smol_str = { version = "0.3", features = ["serde"] }
bitflags = { version = "2", features = ["serde"] }
hex      = "0.4"

[dev-dependencies]
