[package]
name         = "keplor-pricing"
description  = "LiteLLM pricing-catalogue loader and the nanodollar cost engine."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[lints]
workspace = true

[dependencies]

[dev-dependencies]
