[package]
name         = "keplor-pricing"
description  = "LiteLLM pricing-catalogue loader and the nanodollar cost engine."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[lints]
workspace = true

[features]
default = ["fetch"]
fetch   = ["dep:reqwest", "dep:tokio"]

[dependencies]
keplor-core = { path = "../keplor-core" }
serde       = { workspace = true }
serde_json  = { workspace = true }
smol_str    = { version = "0.3", features = ["serde"] }
thiserror   = { workspace = true }
tracing     = { workspace = true }

# Optional: only needed for `Catalog::fetch_latest`.
reqwest = { workspace = true, optional = true }
tokio   = { workspace = true, optional = true, features = ["fs"] }

[dev-dependencies]
proptest = "1"
