[package]
name         = "keplor-providers"
description  = "Provider adapters: one module per LLM wire format."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[lints]
workspace = true

[dependencies]

[dev-dependencies]
