[package]
name         = "keplor-proxy"
description  = "Hyper + axum reverse proxy with the body-tee mechanic."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[lints]
workspace = true

[dependencies]

[dev-dependencies]
