[package]
name         = "keplor-proxy"
description  = "Hyper + axum reverse proxy with the body-tee mechanic."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[lints]
workspace = true

[features]
dev-tls = ["dep:rcgen"]

[dependencies]
keplor-core = { path = "../keplor-core" }

# --- async runtime + HTTP stack ---
tokio      = { workspace = true, features = ["rt-multi-thread", "net", "signal", "sync", "macros", "time"] }
hyper      = { workspace = true, features = ["server", "http1", "http2"] }
axum       = { workspace = true }
tower      = { workspace = true, features = ["util"] }
bytes      = { workspace = true }
http-body-util = { workspace = true }

# --- TLS (outbound) ---
hyper-rustls = { workspace = true, features = ["http2", "webpki-roots"] }
rustls       = { workspace = true }

# --- config ---
figment = { workspace = true }
serde   = { workspace = true }

# --- observability ---
tracing = { workspace = true }
metrics = { workspace = true }

# --- errors ---
thiserror = { workspace = true }

# --- crate-local (not yet in workspace deps) ---
hyper-util       = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
tokio-rustls     = { version = "0.26" }
rustls-pemfile   = { version = "2" }
async-trait      = { version = "0.1" }
arc-swap         = { version = "1" }
pin-project-lite = { version = "0.2" }
http             = { version = "1" }
http-body        = { version = "1" }
tokio-util       = { version = "0.7" }
webpki-roots     = { version = "0.26" }

# --- optional ---
rcgen = { version = "0.13", optional = true }

[dev-dependencies]
wiremock      = { workspace = true }
criterion     = { workspace = true, features = ["async_tokio"] }
reqwest       = { workspace = true }
rcgen         = { version = "0.13" }
tokio         = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
futures-util         = { version = "0.3" }
toml                 = { version = "0.8" }
portpicker           = { version = "0.1" }
anyhow               = { workspace = true }
tracing-subscriber   = { workspace = true }

[[bench]]
name    = "proxy_overhead"
harness = false
