[package]
name         = "keplor-server"
description  = "HTTP ingestion server and pipeline for LLM log aggregation."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[lints]
workspace = true

[dependencies]
keplor-core    = { path = "../keplor-core" }
keplor-pricing = { path = "../keplor-pricing" }
keplor-store   = { path = "../keplor-store" }

tokio      = { workspace = true, features = ["rt-multi-thread", "net", "signal", "sync", "macros", "time"] }
axum       = { workspace = true, features = ["json"] }
tower      = { workspace = true, features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
bytes      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
metrics    = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
thiserror  = { workspace = true }
smol_str   = { version = "0.3", features = ["serde"] }
http        = "1"
secrecy     = { workspace = true }
subtle      = "2"
figment     = { workspace = true }
sha2            = { workspace = true }
lru             = { workspace = true }
ulid            = { workspace = true }
rustls          = { workspace = true }
tokio-rustls      = { workspace = true }
rustls-pki-types  = { workspace = true }
time            = { version = "0.3", features = ["parsing"] }

[dev-dependencies]
tokio   = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { workspace = true }
