[package]
name         = "keplor-server"
description  = "HTTP ingestion server and pipeline for LLM log aggregation."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[lints]
workspace = true

[dependencies]
keplor-core    = { path = "../keplor-core" }
keplor-pricing = { path = "../keplor-pricing" }
keplor-store   = { path = "../keplor-store" }

# Hot-reloadable API key set (SIGHUP) — keplor-store already pulls
# arc-swap transitively, but we depend on it directly so the type
# `arc_swap::ArcSwap` is in scope here.
arc-swap   = "1.7"
tokio      = { workspace = true, features = ["rt-multi-thread", "net", "signal", "sync", "macros", "time"] }
axum       = { workspace = true, features = ["json"] }
tower      = { workspace = true, features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
bytes      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
metrics    = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
thiserror  = { workspace = true }
smol_str   = { version = "0.3", features = ["serde"] }
http        = "1"
secrecy     = { workspace = true }
subtle      = "2"
figment     = { workspace = true }
sha2            = { workspace = true }
lru             = { workspace = true }
ulid            = { workspace = true }
rustls          = { workspace = true }
tokio-rustls      = { workspace = true }
rustls-pki-types  = { workspace = true }
time            = { version = "0.3", features = ["parsing"] }

[features]
default   = []
mimalloc  = ["dep:mimalloc"]
s3        = ["keplor-store/s3"]
# Use simd-json for the POST /v1/events body parse. Adds ~1 MB to
# the binary; gives 1.5–3× faster JSON parse on AVX2/AVX-512 hosts
# for 1–5 KB payloads. Only the ingest body is parsed via simd-json;
# every other JSON path stays on serde_json.
simd-json = ["dep:simd-json"]

[dependencies.mimalloc]
version  = "0.1"
optional = true

[dependencies.simd-json]
version  = "0.16"
optional = true
default-features = false
features = ["serde_impl"]

[dev-dependencies]
tokio      = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest    = { workspace = true }
serde_json = { workspace = true }
rcgen      = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }
tempfile   = "3"
rustls     = { workspace = true }
criterion  = { workspace = true }
dhat       = { workspace = true }
rand       = "0.8"

[[bench]]
name    = "pipeline_bench"
harness = false

[[bench]]
name    = "dhat_pipeline"
harness = false
