[package]
name         = "keplor-store"
description  = "KeplorDB-backed storage for LLM events, rollups, and archive manifests."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[lints]
workspace = true

[features]
default              = ["batch"]
batch                = ["dep:tokio", "dep:metrics"]
s3                   = ["dep:object_store", "dep:zstd"]
# Compile in the legacy SQLite store as a read-only migration source.
# Adds the `rusqlite` (bundled) dep — costs ~2-3 MB on the static binary.
migrate-from-sqlite  = ["dep:rusqlite"]

[dependencies]
keplor-core = { path = "../keplor-core" }
keplordb    = { path = "../../../keplordb/crates/keplordb" }
arc-swap    = "1"
bytes       = { workspace = true }
rusqlite    = { workspace = true, optional = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
smol_str    = { version = "0.3", features = ["serde"] }
thiserror   = { workspace = true }
ulid        = { workspace = true }
http        = "1"
tracing     = { workspace = true }
tokio       = { workspace = true, optional = true, features = ["sync", "time", "rt", "macros"] }
metrics     = { workspace = true, optional = true }
object_store = { version = "0.13", default-features = false, features = ["aws"], optional = true }
zstd         = { workspace = true, optional = true }

[dev-dependencies]
tokio     = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
rand      = "0.8"
criterion = { workspace = true }
dhat      = { workspace = true }
tempfile  = "3"

[[bench]]
name    = "store_bench"
harness = false

[[bench]]
name    = "dhat_batch"
harness = false
