[package]
name         = "keplor-telemetry"
description  = "Dual-schema OTel GenAI + OpenInference span emitter."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[lints]
workspace = true

[dependencies]

[dev-dependencies]
